# ca-k8s-infra

./: Makefile  README.md  cookiecutter.json  presets.json  pyproject.toml
ca-k8s-infra/training-infra/: Chart.yaml  values.schema.json  values.yaml
ca-k8s-infra/training-infra/charts/: falco-4.21.3.tgz
ca-k8s-infra/training-infra/dockerfiles/: falco_guard.py  guard.Dockerfile
ca-k8s-infra/training-infra/templates/: buckets-creation.yaml  download-jobs.yaml  falco.yaml
feast/: Chart.yaml  features.py  values.schema.json
feast/data/: example_features.parquet
feast/templates/: feast.yaml  postgres.yaml  redis.yaml
hooks/: pre_gen_project.py
training/: train.py
training-infra/: values.schema.json  values.yaml
training-infra/dockerfiles/: feast.Dockerfile  job.Dockerfile  training.Dockerfile
training-infra/templates/: aim-pvc.yaml  aim.yaml  buckets-creation.yaml  dataset_download.yaml  dataset_download_feast.yaml  elasticsearch.yaml  external-buckets.yaml  feast.yaml  internal-buckets.yaml  jupyter-pod.yaml  minio-data.yaml  mlflow.yaml  nginx-cnp.yaml  nginx.yaml  training-cluster.yaml  weights-download.yaml
{{cookiecutter.project_slug}}/: Makefile
{{cookiecutter.project_slug}}/overlays/dlp_proxy/training-infra/templates/: dlp-configmap.yaml  dlp-deployment.yaml  dlp-service-patch.yaml  dlp-service.yaml
{{cookiecutter.project_slug}}/training-infra/: values.schema.json  values.yaml
{{cookiecutter.project_slug}}/training-infra/templates/: buckets-creation.yaml  download-jobs.yaml  internal-buckets.yaml  training-cluster.yaml  training-cnp.yaml
(+5 files in other folders)
