[project]
    dependencies = [
        "feast[postgres,redis]==0.47.0",
        "ray[data,serve,train,tune]==2.42.1",
        "transformers==4.49.0",
        "datasets==3.3.1",
        "psycopg[binary]==3.2.6",
        "sqlalchemy==2.0.21",
        "torch==2.6.0+cpu",
]
    description="Training framework"
    name="training"
    readme="README.md"
    requires-python="==3.12.*"
    version="0.1.0"

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"


[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"
